<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- ============================= -->
	<!--        PARENT SPRING BOOT     -->
	<!-- ============================= -->
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.1</version>
		<relativePath/>
	</parent>

	<!-- ============================= -->
	<!--        INFORMATIONS PROJET    -->
	<!-- ============================= -->
	<groupId>com.macspace</groupId>
	<artifactId>gestiondestock</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Gestion de stock</name>
	<description>API REST du projet MacSpace - Mac Sécurité</description>

	<!-- ============================= -->
	<!--        PROPRIÉTÉS             -->
	<!-- ============================= -->
	<properties>
		<java.version>17</java.version>
		<springdoc.version>2.5.0</springdoc.version>
		<jjwt.version>0.12.5</jjwt.version>
		<flickr4java.version>3.0.9</flickr4java.version>
		<lombok.version>1.18.32</lombok.version>
	</properties>

	<dependencies>

		<!-- ============================= -->
		<!--        WEB                    -->
		<!-- ============================= -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- ============================= -->
		<!--        BASE DE DONNÉES        -->
		<!-- ============================= -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- ============================= -->
		<!--        SÉCURITÉ               -->
		<!-- ============================= -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- JWT -->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>${jjwt.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- ============================= -->
		<!--        DOCUMENTATION API      -->
		<!-- ============================= -->
		<!-- Remplacement de Springfox (incompatible Spring Boot 3.x) -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${springdoc.version}</version>
		</dependency>

		<!-- ============================= -->
		<!--        MÉDIAS / PHOTOS        -->
		<!-- ============================= -->
		<dependency>
			<groupId>com.flickr4java</groupId>
			<artifactId>flickr4java</artifactId>
			<version>${flickr4java.version}</version>
		</dependency>

		<!-- ============================= -->
		<!--        UTILITAIRES            -->
		<!-- ============================= -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<optional>true</optional>
		</dependency>

		<!-- Validation des données -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!-- ============================= -->
		<!--        TESTS                  -->
		<!-- ============================= -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<!-- ============================= -->
	<!--        BUILD                  -->
	<!-- ============================= -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>